--- a/index.html
+++ b/index.html
@@ -1768,7 +1768,7 @@
                         <p class="h2">Осознанный шопинг</p>
                         <h1 class="h1">С&nbsp;серией ECCO UPCYCLED</h1>
                         <p class="call__subtitle">Шоперы ECCO UPCYCLED создаются из&nbsp;остатков редких видов кожи с&nbsp;наших кожевенных мануфактур. Так каждая сумка получается уникальной и&nbsp;неповторимой.</p>
-                        <a class="button" href="https://www.ecco.ru/elu/upcycled-collection/">Познакомиться с коллекцией</a>
+                        <a class="no-padding-mb button" href="https://www.ecco.ru/elu/upcycled-collection/">Познакомиться с коллекцией</a>
                     </div>
                 </div>
                 <div class="marquee-box" id="marqueeBox">
@@ -1796,7 +1796,6 @@
                                 </div>
                                 <p class="small">ECCO xxxx</p>
                                 <p class="small">$000.00</p>
-                                <a class="bg-dark small button" href="https://www.ecco.ru/catalog/9107570/91156">Смотреть</a>
                             </div>
                             <div class="section-goods__card swiper-slide">
                                 <div class="section-goods__img-box">
@@ -1805,7 +1804,6 @@
                                 </div>
                                 <p class="small">ECCO xxxx</p>
                                 <p class="small">$000.00</p>
-                                <a class="bg-dark small button" href="https://www.ecco.ru/catalog/9105802/91156">Смотреть</a>
                             </div>
                             <div class="section-goods__card swiper-slide">
                                 <div class="section-goods__img-box">
@@ -1814,12 +1812,12 @@
                                 </div>
                                 <p class="small">ECCO xxxx</p>
                                 <p class="small">$000.00</p>
-                                <a class="bg-dark small button" href="https://www.ecco.ru/catalog/9107572/91156">Смотреть</a>
                             </div>
                         </div>
                         <div class="section-goods__pagination swiper-pagination"></div>
                     </div>
-                    <a class="bg-dark button" href="https://www.ecco.ru/elu/upcycled-collection/">Смотреть всю коллекцию</a>
+                    <div class="button-dp"><a class="bg-dark small button" href="https://www.ecco.ru/elu/upcycled-collection/">Смотреть всю коллекцию</a></div>
+                    <div class="button-mb"><a class="bg-dark small button" href="https://www.ecco.ru/elu/upcycled-collection/">Смотреть</a></div>
                 </div>
                 <section class="section section--box">
                     <div class="group group--small-gap group--with-padding">
